<?xml version="1.0"?>
<package format="2">
  <name>goal_seeker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="perezsaura.david@gmail.com">cvar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>trajectory_msgs</depend> 
  <depend>tf2</depend>
  <depend>path_planner</depend>
  <depend>icuas23_competition</depend>
  <!-- <depend>backward_ros</depend> -->
  
</package>
